# rwkv-mobicog

./: CMakeLists.txt  README.md  test_opencog  test_opencog_backend.cpp
.github/workflows/: build.yml
converter/: convert_state_to_rmpack.py
converter/rwkv_src/: rwkv_modeling.py  rwkv_v7_modules.py
examples/: CMakeLists.txt  batch_benchmark.cpp  benchmark_vision_encoder.cpp  gen.cpp  lambada.cpp  mmlu.cpp  simple_benchmark.cpp  test_chat.cpp  test_chat_batch.cpp  test_chat_c_api.cpp  test_chat_resume.cpp  test_clear_states.cpp  test_loaded_models_api.cpp  test_model_reloading.cpp  test_multiple_models.cpp  test_multiple_models_tts.cpp  test_opencog.cpp  test_othello.cpp  test_state_loading.cpp  test_sudoku.cpp  test_tts.cpp  test_vision_encoder.cpp  test_vision_encoder_with_adapter.cpp  test_whisper_encoder.cpp
examples/flutter/ffigen/: rwkv_mobile.dart
src/: backend.cpp  backend.h  c_api.cpp  c_api.h  logger.cpp  logger.h  rmpack.cpp  rmpack.h  runtime.cpp  runtime.h  sampler.cpp  sampler.h  soc_detect.cpp  state.cpp  state.h  trie.hpp  utils.h
src/backends/coreml/: coreml_rwkv_backend.cpp  coreml_rwkv_backend.h  rwkv-coreml.h  rwkv-coreml.mm
src/backends/llama_cpp/: llama_cpp_backend.cpp  llama_cpp_backend.h
src/backends/mnn/: mnn_rwkv_backend.cpp  mnn_rwkv_backend.h
src/backends/ncnn/: ncnn_rwkv_backend.cpp  ncnn_rwkv_backend.h
src/backends/opencog/: README.md  opencog_rwkv_backend.cpp  opencog_rwkv_backend.h  rwkv_atoms.cpp  rwkv_atoms.h
src/backends/qnn/: qnn_backend.cpp  qnn_backend.h  rmpack.cpp  rmpack.h
src/backends/qnn/rwkv-qualcomm/Utils/: DataUtil.cpp  IOTensor.cpp
src/backends/web_rwkv/: web_rwkv_backend.cpp  web_rwkv_backend.h
src/multimodal/: multimodal_encoder.h
src/multimodal/tts/: cosyvoice.cpp  cosyvoice.h  frontend_utils.cpp  sparktts.cpp
src/multimodal/vision/: clip.cpp  clip.h  llava.cpp  llava.h  vision_encoder.cpp  vision_encoder.h
src/multimodal/whisper/: whisper.cpp  whisper_encoder.cpp  whisper_encoder.h
